get base lws api calls working

--- a/lws-web/lws/templates/login.html
+++ b/lws-web/lws/templates/login.html
@@ -2,7 +2,7 @@
   <li>{{ message }}</li>
 {% endfor %}
 <br />
-<div id="setup">
+<div id="login">
     <form method="post">
         <label for="username">Username</label>
         <input type="text" name="username" />
