better templating, improving rpc api calls

--- a/lws-web/lws/templates/index.html
+++ b/lws-web/lws/templates/index.html
@@ -1,5 +1,10 @@
+{% extends 'includes/base.html' %}
+
+{% block content %}
 {% if current_user.is_authenticated %}
   <p>hi {{ current_user.username }}</p>
 {% else %}
   <p>hi anon</p>
 {% endif %}
+{% endblock %}
+
