--- a/lws-web/lws/templates/setup.html
+++ b/lws-web/lws/templates/setup.html
@@ -1,7 +1,6 @@
-{% for message in get_flashed_messages() %}
-  <li>{{ message }}</li>
-{% endfor %}
-<br />
+{% extends 'includes/base.html' %}
+
+{% block content %}
 <div id="setup">
     <form method="post">
         <label for="username">Username</label>
@@ -23,3 +22,4 @@
         margin-bottom: 1em;
     }
 </style>
+{% endblock %}
