--- a/lws-web/lws/templates/includes/base.html
+++ b/lws-web/lws/templates/includes/base.html
@@ -36,7 +36,7 @@
               </a>
             </div> -->
             <div class="nav-right">
-                <a>Wallets</a>
+                <a class="{% if request.path == '/wallets' %}active{% endif %}" href="/wallets">Wallets</a>
                 <a href="/logout">Logout</a>
             </div>
         </nav>
