--- a/lws-web/lws/templates/wallet/show.html
+++ b/lws-web/lws/templates/wallet/show.html
@@ -1,14 +1,26 @@
 {% extends 'includes/base.html' %}
 
 {% block content %}
-<p>{{ wallet.name }}</p>
-<p>{{ wallet.description }}</p>
-<p>{{ wallet.date }}</p>
-<p>{{ wallet.restore_height }}</p>
-<p>{{ wallet.address }}</p>
-<pre>
-    {{ wallet.get_wallet_info() }}
-</pre>
+{% set info = wallet.get_wallet_info() %}
+<h1>{{ wallet.name }}</h1>
+<h5>{{ wallet.description }}</h5>
+<h6>{{ wallet.date }}</h6>
+<p>Restore Height: {{ wallet.restore_height }}</p>
+<p>Address: {{ wallet.address }}</p>
+<p>Locked: {{ info['locked_funds'] }}</p>
+<p>Received: {{ info['total_received'] }}</p>
+<p>Sent: {{ info['total_sent'] }}</p>
+<p>Scanned Height: {{ info['scanned_height'] }} ({{ info['blockchain_height'] - info['scanned_height'] }} blocks away from top)</p>
+<p>Spent Outputs: {{ info['spent_outputs'] | length }}</p>
+<!-- 
+    {
+        'amount': '123123123', 
+        'key_image': 'asdasdasd', 
+        'tx_pub_key': 'asdasdasd', 
+        'out_index': 1, 
+        'mixin': 15
+    } 
+-->
 
 <a href="{{ url_for('wallet_rescan', id=wallet.id) }}"><button>rescan</button></a>
 {% endblock %}
