--- a/lws-web/lws/templates/wallet/list.html
+++ b/lws-web/lws/templates/wallet/list.html
@@ -1,6 +1,7 @@
 {% extends 'includes/base.html' %}
 
 {% block content %}
+<h1>Manage Wallets</h1>
 <a class="button outline primary" href="/wallet/add">Add a Wallet</a>
 <div id="wallets" class="content">
     {% for wallet in wallets %}
