--- a/lws-web/lws/templates/includes/base.html
+++ b/lws-web/lws/templates/includes/base.html
@@ -19,16 +19,18 @@
         <meta name="twitter:image" content="">
         <meta name="keywords" content="Wownero, Monero, crypto, wallet, explorer">
         <link rel="stylesheet" href="https://unpkg.com/chota@latest">
-        <!-- <link rel="stylesheet" href="/static/css/normalize.css">
+        <link rel="stylesheet" href="/static/main.css">
+        <!-- 
         <link rel="stylesheet" href="/static/css/skeleton.css">
-        <link rel="stylesheet" href="/static/css/main.css"> -->
+        <link rel="stylesheet" href="/static/css/main.css">
+        -->
       </head>
       
 	<body>
 		<nav class="nav">
             <div class="nav-left">
               <a class="{% if request.path == '/' %}active{% endif %}" href="/">Home</a>
-              <a>Settings</a>
+              <a class="{% if request.path == '/utils' %}active{% endif %}" href="/utils">Utils</a>
             </div>
             <!-- <div class="nav-center">
               <a class="brand">
