split out routes

--- a/lws-web/lws/templates/index.html
+++ b/lws-web/lws/templates/index.html
@@ -6,7 +6,7 @@
   <p>LWS Admin: {{ config.LWS_ADMIN_URL }}</p>
   <p>LWS RPC: {{ config.LWS_URL }}</p>
   <p>{{ wallets.count() }} wallet{% if wallets.count() > 1 %}s{% endif %} being tracked</p>
-  <a href="/wallets" class="button outline primary">Manage Wallets</a>
+  <a href="{{ url_for('wallet.list') }}" class="button outline primary">Manage Wallets</a>
 </div>
 {% endblock %}
 
