--- a/lws-web/lws/templates/wallet/show.html
+++ b/lws-web/lws/templates/wallet/show.html
@@ -23,5 +23,5 @@
     } 
 -->
 
-<a href="{{ url_for('wallet_rescan', id=wallet.id) }}"><button>rescan</button></a>
+<a href="{{ url_for('wallet.rescan', id=wallet.id) }}"><button>rescan</button></a>
 {% endblock %}
