--- a/lws-web/lws/templates/wallet/list.html
+++ b/lws-web/lws/templates/wallet/list.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <h1>Manage Wallets</h1>
-<a class="button outline primary" href="/wallet/add">Add a Wallet</a>
+<a class="button outline primary" href="{{ url_for('wallet.add') }}">Add a Wallet</a>
 <div id="wallets" class="content">
     {% for wallet in wallets %}
-        <p>{{ wallet.id }} - <a href="{{ url_for('wallet_show', id=wallet.id) }}">{{ wallet.name }}</a> - {{ wallet.description }} - {{ wallet.date }}</p>
+        <p>{{ wallet.id }} - <a href="{{ url_for('wallet.show', id=wallet.id) }}">{{ wallet.name }}</a> - {{ wallet.description }} - {{ wallet.date }}</p>
     {% endfor %}
 </div>
 <style>
