--- a/lws-web/lws/templates/setup.html
+++ b/lws-web/lws/templates/setup.html
@@ -1,32 +1,17 @@
 {% extends 'includes/base.html' %}
 
 {% block content %}
-<div id="setup">
-    <h1>Setup your Monero light wallet</h1>
-    <p class="subtext">The LWS address and view key must be generated from <i>monero-lws</i> using the initialization scripts.</p>
-    <form method="post">
-        <label for="username">Username</label>
-        <input type="text" name="username" />
-        <label for="password">Password</label>
-        <input type="password" name="password" />
-        <label for="address">LWS Address</label>
-        <input type="text" name="address" />
-        <label for="view_key">LWS View Key</label>
-        <input type="text" name="view_key" />
-        <button type="submit">Submit</button>
-    </form>
-</div>
-
-<style>
-    input {
-        display: block;
-        padding-bottom: .5em;
-        margin-bottom: 1em;
-    }
-    .subtext {
-        font-size: 1em;
-        display: block;
-        color: #666;
-    }
-</style>
+<h1>Setup your Monero LWS</h1>
+<p class="subtext">The LWS address and view key must be generated from <i>monero-lws</i> using the initialization scripts.</p>
+<form method="post">
+    <label for="username">Username</label>
+    <input type="text" name="username" />
+    <label for="password">Password</label>
+    <input type="password" name="password" />
+    <label for="address">LWS Address</label>
+    <input type="text" name="address" />
+    <label for="view_key">LWS View Key</label>
+    <input type="text" name="view_key" />
+    <button type="submit">Submit</button>
+</form>
 {% endblock %}
