--- a/lws-web/lws/templates/wallet/add.html
+++ b/lws-web/lws/templates/wallet/add.html
@@ -1,28 +1,21 @@
 {% extends 'includes/base.html' %}
 
 {% block content %}
-<div id="wallet_add">
-    <form method="post">
-        <label for="name">Name</label>
-        <input type="text" name="name" />
-        <label for="description">Description</label>
-        <input type="text" name="description" />
-        <label for="address">Address</label>
-        <input type="text" name="address" />
-        <label for="view_key">View Key</label>
-        <input type="text" name="view_key" />
-        <label for="restore_height">Restore Height</label>
-        <input type="number" name="restore_height" />
-        <button type="submit">Send</button>
-    </form>
-</div>
-<style>
-    input {
-        display: block;
-        padding-bottom: .5em;
-        margin-bottom: 1em;
-    }
-</style>
+<a href="/wallets">Go Back</a>
+<h1>Add a Wallet</h1>
+<form method="post">
+    <label for="name">Name</label>
+    <input type="text" name="name" />
+    <label for="description">Description</label>
+    <input type="text" name="description" />
+    <label for="address">Address</label>
+    <input type="text" name="address" />
+    <label for="view_key">View Key</label>
+    <input type="text" name="view_key" />
+    <label for="restore_height">Restore Height</label>
+    <input type="number" name="restore_height" />
+    <button type="submit">Send</button>
+</form>
 {% endblock %}
 
 
