--- a/lws-web/lws/templates/wallet/list.html
+++ b/lws-web/lws/templates/wallet/list.html
@@ -3,14 +3,9 @@
 {% block content %}
 <h1>Manage Wallets</h1>
 <a class="button outline primary" href="{{ url_for('wallet.add') }}">Add a Wallet</a>
-<div id="wallets" class="content">
+<div class="content">
     {% for wallet in wallets %}
         <p>{{ wallet.id }} - <a href="{{ url_for('wallet.show', id=wallet.id) }}">{{ wallet.name }}</a> - {{ wallet.description }} - {{ wallet.date }}</p>
     {% endfor %}
 </div>
-<style>
-    .content {
-        padding-top: 2em;
-    }
-</style>
 {% endblock %}
