--- a/lws-web/lws/templates/wallet/show.html
+++ b/lws-web/lws/templates/wallet/show.html
@@ -1,27 +1,21 @@
 {% extends 'includes/base.html' %}
 
 {% block content %}
+<a href="/wallets">Go Back</a>
 {% set info = wallet.get_wallet_info() %}
 <h1>{{ wallet.name }}</h1>
 <h5>{{ wallet.description }}</h5>
 <h6>{{ wallet.date }}</h6>
 <p>Restore Height: {{ wallet.restore_height }}</p>
-<p>Address: {{ wallet.address }}</p>
-<p>Locked: {{ info['locked_funds'] }}</p>
-<p>Received: {{ info['total_received'] }}</p>
-<p>Sent: {{ info['total_sent'] }}</p>
-<p>Scanned Height: {{ info['scanned_height'] }} ({{ info['blockchain_height'] - info['scanned_height'] }} blocks away from top)</p>
+<p>Address: <span class="key">{{ wallet.address }}</span></p>
+<p>Scanned Height: {{ info['scanned_height'] }} <span class="smol">({{ info['blockchain_height'] - info['scanned_height'] }} blocks away from top)</span></p>
 <p>Chain Height: {{ info['blockchain_height'] }}</p>
 <p>Spent Outputs: {{ info['spent_outputs'] | length }}</p>
-<!-- 
-    {
-        'amount': '123123123', 
-        'key_image': 'asdasdasd', 
-        'tx_pub_key': 'asdasdasd', 
-        'out_index': 1, 
-        'mixin': 15
-    } 
--->
 
-<a href="{{ url_for('wallet.rescan', id=wallet.id) }}"><button>rescan</button></a>
+<a href="{{ url_for('wallet.rescan', id=wallet.id) }}" class="button dark outline">rescan</a>
+{% if request.args.get('disable') %}
+    <a href="{{ url_for('wallet.disable', id=wallet.id) }}" class="button error">are you sure?</a>
+{% else %}
+    <a href="?disable=true" class="button error">disable</a>
+{% endif %}
 {% endblock %}
