--- a/lwsadmin/lws/templates/includes/base.html
+++ b/lwsadmin/lws/templates/includes/base.html
@@ -18,12 +18,9 @@
         <meta name="twitter:description" content="Monero LWS web app">
         <meta name="twitter:image" content="">
         <meta name="keywords" content="Wownero, Monero, crypto, wallet, explorer">
-        <link rel="stylesheet" href="https://unpkg.com/chota@latest">
+        <link rel="stylesheet" href="/static/chota.css">
         <link rel="stylesheet" href="/static/main.css">
-        <!-- 
-        <link rel="stylesheet" href="/static/css/skeleton.css">
-        <link rel="stylesheet" href="/static/css/main.css">
-        -->
+        <script src="/static/htmx.js"></script>
       </head>
       
 	<body>
