--- a/lwsadmin/lws/templates/htmx/show_wallets.html
+++ b/lwsadmin/lws/templates/htmx/show_wallets.html
@@ -1,6 +1,7 @@
 <table class="striped">
     <thead>
       <tr>
+        <th>Label</th>
         <th>Status</th>
         <th>Action</th>
         <th>Address</th>
@@ -8,49 +9,55 @@
       </tr>
     </thead>
     <tbody>
+      {% for status in requests %}
+        {% for request in requests[status] %}
+        <tr>
+          <td>?</td>
+          <td>
+            <span class="tag text-grey">
+              PENDING
+            </span>
+          </td>
+          <td>
+            <!-- <a hx-get="/htmx/import_wallet" hx-target="#walletForm" class="button primary outline"></a> -->
+            <a href="/wallet/{{ request['address'] }}/approve" class="button primary outline">Approve</a>
+            <a href="/wallet/{{ request['address'] }}/deny" class="button secondary outline">Deny</a>
+          </td>
+          <td>{{ request['address'] | shorten }}</td>
+          <td>{{ request['start_height'] }}</td>
+        </tr>
+        {% endfor %}
+      {% endfor %}
       {% for status in accounts %}
         {% for account in accounts[status] %}
         <tr>
           <td>
-            <span class="tag text-white {% if status == 'active' %}bg-success{% else %}bg-error{% endif %}">
+            <div hx-get="/htmx/label_wallet" hx-target="this" hx-swap="outerHTML" hx-vals='{"address": "{{ account['address'] }}", "label": "{{ account['address'] | find_label }}"}'>{{ account['address'] | find_label }}</div>
+          </td>
+          <td>
+            <span class="tag {% if status == 'active' %}text-primary{% else %}text-error{% endif %}">
               {{ status | upper }}
             </span>
           </td>
           <td>
             {% if status == 'active' %}
-              <a href="/wallet/{{ account['address'] }}/disable" class="">disable</a>
+              <!-- <a href="/wallet/{{ account['address'] }}/inactive" class="button secondary outline">Disable</a> -->
+              <button class="button primary outline" tx-target="#show_wallets" hx-get="/wallet/{{ account['address'] }}/inactive">Disable</button>
             {% else %}
-              <a href="/wallet/{{ account['address'] }}/enable" class="">enable</a>
+              <a href="/wallet/{{ account['address'] }}/active" class="button primary outline">Enable</a>
             {% endif %}
           </td>
           <td>{{ account['address'] | shorten }}</td>
           <td>
-            
-            <form method="get" action="{{ url_for('wallet.rescan') }}">
-              {{ account['scan_height'] }}
-              <input type="integer" name="height" style="width: 5em; display: inline;" />
-              <input type="hidden" name="address" value="{{ account['address'] }}" />
-              <button type="submit">Rescan</button>
-            </form>
+            {{ account['scan_height'] }}
+            <!--
+              <form method="get" action="{{ url_for('wallet.rescan') }}">
+                <input type="integer" name="height" style="width: 5em; display: inline;" />
+                <input type="hidden" name="address" value="{{ account['address'] }}" />
+                <button type="submit">Rescan</button>
+              </form> 
+            -->
           </td>
-        </tr>
-        {% endfor %}
-      {% endfor %}
-  
-      {% for status in requests %}
-        {% for request in requests[status] %}
-        <tr>
-          <td>
-            <span class="tag text-white bg-dark">
-              PENDING
-            </span>
-          </td>
-          <td>
-            <a href="/wallet/{{ request['address'] }}/accept" class="">approve</a> | 
-            <a href="/wallet/{{ request['address'] }}/reject" class="">reject</a>
-          </td>
-          <td>{{ request['address'] | shorten }}</td>
-          <td>{{ request['start_height'] }}</td>
         </tr>
         {% endfor %}
       {% endfor %}
