--- a/lwsadmin/lws/templates/index.html
+++ b/lwsadmin/lws/templates/index.html
@@ -5,21 +5,18 @@
 <h1>Monero Lightwallet Server</h1>
 <p>LWS Admin: {{ config.LWS_ADMIN_URL }}</p>
 <p>LWS RPC: {{ config.LWS_URL }}</p>
-<h3>Accounts</h3>
 
 <div>
-  <a hx-get="/htmx/import_wallet" hx-target="#walletEvent" class="button primary outline">
-    Import Wallet
-  </a>
-  <a hx-get="/htmx/create_wallet" hx-target="#walletEvent" class="button primary">
-    Create Wallet
-  </a>
-</div>
-<div class="" style="margin-top: 2em">
-  <p id="walletEvent"></p>
+  <a hx-get="/htmx/import_wallet" hx-target="#walletForm" class="button primary outline">Import Wallet</a>
+  <a hx-get="/htmx/create_wallet" hx-target="#walletForm" class="button primary">Create Wallet</a>
+  <p id="walletForm" style="margin: 2em 0 2em 0"></p>
 </div>
 
-<div hx-trigger="every 15s" hx-get="/htmx/show_wallets" hx-target="#show_wallets"></div>
-<div hx-trigger="load" hx-get="/htmx/show_wallets" id="show_wallets"></div>
+<div>
+  <h3>Accounts</h3>
+  <a hx-get="/htmx/show_wallets" hx-target="#show_wallets" class="button outline" hx-indicator="#refreshLoader">Refresh</a>
+  <p class="indicator" id="refreshLoader">...</p>
+  <div hx-trigger="load" hx-get="/htmx/show_wallets" id="show_wallets"></div>
+</div>
 
 {% endblock %}
