--- a/lwsadmin/lws/templates/utils/mnemonic.html
+++ b/lwsadmin/lws/templates/utils/mnemonic.html
@@ -4,7 +4,7 @@
 <a href="/utils">Go Back</a>
 <h1>Parse Mnemonic Seed</h1>
 <form method="post">
-    <label for="seed">25 Word Seed</label>
+    <label for="seed">12, 13, or 25 Word Seed</label>
     <input type="password" name="seed" />
     <button type="submit">Send</button>
 </form>
