--- a/lwsadmin/lws/templates/index.html
+++ b/lwsadmin/lws/templates/index.html
@@ -5,6 +5,7 @@
 <h1>Monero Lightwallet Server</h1>
 <p>LWS Admin: {{ config.LWS_ADMIN_URL }}</p>
 <p>LWS RPC: {{ config.LWS_URL }}</p>
+<p>Monero Web Wallet: <a href="{{ config.MYMONERO_URL }}" target="_blank">{{ config.MYMONERO_URL }}</a></p>
 
 <div>
   <a hx-get="/htmx/import_wallet" hx-target="#walletForm" class="button primary outline">Import Wallet</a>
@@ -14,6 +15,11 @@
 
 <div>
   <h3>Accounts</h3>
+  <p>
+    The below Monero accounts are stored in LWS;
+    only active accounts will be synced. 
+    Accounts created in the web wallet must be approved here before use.
+  </p>
   <div hx-get="/htmx/show_wallets" hx-target="#show_wallets" class="button outline" hx-indicator="#refresh_loader" onclick="handleRefresh()">
     Refresh
     <i class="fa-solid fa-rotate-right indicator" id="refresh_loader"></i>
