--- a/lwsadmin/lws/static/main.css
+++ b/lwsadmin/lws/static/main.css
@@ -24,3 +24,33 @@ input {
     padding-bottom: .5em;
     margin-bottom: 1em;
 }
+
+.hidden {
+    display: none !important;
+}
+
+.indicator .htmx-request{
+    display:inline;
+}
+
+.indicator.htmx-request{
+    display:inline;
+}
+
+.underline {
+    text-decoration: underline dotted;
+}
+
+.showFade {
+    animation-name: render;
+    animation-duration: .5s;
+}
+
+@keyframes render {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
